overflow fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html {
+html, body {
   overflow: auto;
 }
 
@@ -55,7 +55,6 @@ section {
 #spinner-div {
   background-color: rgba(255,255,255,0.15);
   position: absolute;
-
   display: flex;
   align-items: center;
   justify-content: center;
